--- a/index.html
+++ b/index.html
@@ -1,74 +1,222 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="theme-color" content="#0b3d91" />
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta name="theme-color" content="#0b3d91" />
+    <link rel="manifest" href="manifest.json" />
 
-  <link rel="manifest" href="manifest.json" />
+    <style>
+      :root {
+        font-family: 'Noto Sans KR', 'Segoe UI', sans-serif;
+        color: #0f172a;
+        background: #0b3d91;
+      }
 
-  <title>신흥중 야구부 지출 등록</title>
+      * {
+        box-sizing: border-box;
+      }
 
-  <style>
-    :root {
-      font-family: 'Noto Sans KR', 'Segoe UI', sans-serif;
-      color: #0f172a;
-      background: #0b3d91;
-    }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background: #0b3d91;
-    }
-    .app-shell {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      background: linear-gradient(180deg, #0b3d91 0%, #0b3d91 40%, #f8fafc 40%);
-      padding: 12px;
-    }
-    .card {
-      flex: 1;
-      background: #fff;
-      border-radius: 32px;
-      box-shadow: 0 30px 70px rgba(11, 61, 145, 0.25);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-    }
-    header {
-      background: linear-gradient(135deg, #0b3d91, #0b7be6);
-      padding: 28px 24px 32px;
-      color: #fff;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 1.7rem;
-      letter-spacing: -0.5px;
-    }
-    header p {
-      margin: 6px 0 0;
-      font-size: 0.95rem;
-      opacity: 0.9;
-    }
+      body {
+        margin: 0;
+        min-height: 100vh;
+        background: #0b3d91;
+      }
 
-    form {
-      padding: 20px 24px;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-    }
+      .app-shell {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background: linear-gradient(180deg, #0b3d91 0%, #0b3d91 40%, #f8fafc 40%, #f8fafc 100%);
+        padding: 12px;
+      }
 
-    label {
-      display: flex;
-      flex-direction: column;
-      font-weight: 600;
-      font-size: 0.95rem;
-    }
+      .card {
+        flex: 1;
+        background: #fff;
+        border-radius: 32px;
+        box-shadow: 0 30px 70px rgba(11, 61, 145, 0.25);
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+      }
 
-    input, select, textarea {
-      margin-top: 6px;
-      border-radius: 14px;
-      border: 1px solid rgba(15, 23,
+      header {
+        background: linear-gradient(135deg, #0b3d91, #0b7be6);
+        padding: 28px 24px 32px;
+        color: #fff;
+      }
+
+      header h1 {
+        margin: 0;
+        font-size: 1.5rem;
+        letter-spacing: 0.2em;
+      }
+
+      header p {
+        margin: 6px 0 0;
+        font-size: 0.95rem;
+        opacity: 0.9;
+      }
+
+      form {
+        padding: 20px 24px 28px;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 14px;
+        overflow-y: auto;
+      }
+
+      label {
+        display: flex;
+        flex-direction: column;
+        font-weight: 600;
+        font-size: 0.95rem;
+      }
+
+      input,
+      select,
+      textarea {
+        margin-top: 6px;
+        border-radius: 14px;
+        border: 1px solid rgba(15, 23, 42, 0.15);
+        padding: 12px 14px;
+        font-size: 1rem;
+        transition: border-color 0.2s ease, box-shadow 0.2s ease;
+        background: #fff;
+      }
+
+      input:focus,
+      select:focus,
+      textarea:focus {
+        outline: none;
+        border-color: #0b3d91;
+        box-shadow: 0 0 0 4px rgba(11, 61, 145, 0.15);
+      }
+
+      select {
+        appearance: none;
+        background-image: linear-gradient(45deg, transparent 50%, #0b3d91 50%),
+          linear-gradient(135deg, #0b3d91 50%, transparent 50%);
+        background-position: calc(100% - 14px) calc(0.85em + 2px),
+          calc(100% - 8px) calc(0.85em + 2px);
+        background-size: 6px 6px, 6px 6px;
+        background-repeat: no-repeat;
+      }
+
+      textarea {
+        min-height: 120px;
+        resize: vertical;
+      }
+
+      .hint {
+        font-size: 0.82rem;
+        color: rgba(15, 23, 42, 0.6);
+        margin-top: 4px;
+      }
+
+      .button-row {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      button {
+        border: none;
+        border-radius: 26px;
+        background: linear-gradient(135deg, #ff8c37, #f53264);
+        color: #fff;
+        font-size: 1.1rem;
+        font-weight: 700;
+        padding: 14px;
+        cursor: pointer;
+        box-shadow: 0 14px 24px rgba(245, 50, 100, 0.35);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+
+      button:active {
+        transform: translateY(1px);
+        box-shadow: 0 10px 20px rgba(245, 50, 100, 0.35);
+      }
+
+      .note {
+        font-size: 0.82rem;
+        color: rgba(15, 23, 42, 0.7);
+        text-align: center;
+      }
+
+      @media (max-width: 500px) {
+        .app-shell {
+          padding: 0;
+        }
+
+        .card {
+          border-radius: 0;
+          box-shadow: none;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="app-shell">
+      <div class="card">
+        <header>
+          <h1>신흥중 야구부</h1>
+          <p>집행부 전용 지출 등록</p>
+        </header>
+
+        <form id="expenseForm" autocomplete="off">
+          <label>등록자
+            <input type="text" name="submittedBy" required placeholder="예: 이승현">
+          </label>
+
+          <label>지출일
+            <input type="date" name="date" required>
+          </label>
+
+          <label>카테고리
+            <select name="category" required>
+              <option value="">카테고리 선택</option>
+              <option>훈련용품</option>
+              <option>대회지원</option>
+              <option>용품비</option>
+            </select>
+          </label>
+
+          <label>예산월
+            <input type="text" placeholder="YYYY/MM" name="budgetMonth" required pattern="\d{4}/\d{2}">
+            <span class="hint">예: 2025/11</span>
+          </label>
+
+          <label>금액
+            <input type="number" name="amount" min="0" required placeholder="₩">
+          </label>
+
+          <label>내용
+            <textarea name="description" rows="3" placeholder="무슨 용도였는지 적어주세요"></textarea>
+          </label>
+
+          <label>영수증 링크
+            <input type="url" name="receiptLink" required placeholder="https://">
+          </label>
+
+          <div class="button-row">
+            <button type="submit">지출 등록</button>
+            <p class="note">등록 즉시 집행부 알림/예산 체크가 처리됩니다.</p>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <script>
+      const form = document.getElementById('expenseForm');
+      form.addEventListener('submit', e => {
+        e.preventDefault();
+        const data = Object.fromEntries(new FormData(form));
+        alert("데이터가 저장되는 기능은 Apps Script 연결 후 활성화됩니다.");
+      });
+    </script>
+  </body>
+</html>
