--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 /* ========================================
    GitHub API 설정
 ======================================== */
-const GITHUB_TOKEN = "YOUR_TOKEN_HERE";  // ← 너의 토큰 입력
+const GITHUB_TOKEN = "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";  // ← 너의 토큰 입력
 const REPO_OWNER = "sicsin777-create";
 const REPO_NAME = "pwa-shinheung-expense";
 
