--- a/index.html
+++ b/index.html
@@ -1,348 +1,284 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#0b3d91" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>신흥중 야구부 가계부</title>
 
-  <title>신흥중 야구부 가계부</title>
+<!-- PWA 설정 -->
+<link rel="manifest" href="manifest.json" />
+<meta name="theme-color" content="#0039a6" />
 
-  <!-- Manifest -->
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sanitize.css" />
+<style>
+/* ===== 기본 스타일 ===== */
+body {
+    margin: 0;
+    font-family: 'Noto Sans KR', sans-serif;
+    background: #f2f4f7;
+}
 
-  <style>
-    body {
-      font-family: 'Pretendard', sans-serif;
-      margin: 0;
-      background: #f1f5f9;
-      color: #333;
-    }
+/* 상단 헤더 */
+.header {
+    padding: 24px;
+    background: linear-gradient(180deg, #0039a6 0%, #0054d1 70%);
+    color: white;
+    border-radius: 0 0 24px 24px;
+}
+.header h1 {
+    margin: 0;
+    font-size: 28px;
+    font-weight: 700;
+}
+.header p {
+    margin-top: 6px;
+    opacity: .85;
+}
 
-    .header {
-      background: linear-gradient(135deg, #0b3d91, #1976d2);
-      padding: 32px 20px;
-      color: white;
-      border-bottom-left-radius: 32px;
-      border-bottom-right-radius: 32px;
-    }
+/* 예산월 선택 */
+.select-box {
+    margin-top: 20px;
+    background: white;
+    width: 160px;
+    padding: 8px;
+    border-radius: 12px;
+}
 
-    .title {
-      font-size: 32px;
-      font-weight: 800;
-    }
+/* 카드 3개 */
+.card-wrap {
+    display: flex;
+    gap: 14px;
+    margin-top: 24px;
+}
+.card {
+    flex: 1;
+    background: white;
+    padding: 20px;
+    border-radius: 16px;
+    text-align: left;
+    font-size: 14px;
+}
+.card strong {
+    display: block;
+    margin-top: 8px;
+    font-size: 24px;
+    font-weight: 700;
+}
 
-    .subtitle {
-      font-size: 16px;
-      opacity: 0.8;
-      margin-top: 4px;
-    }
+/* 지출내역 */
+.history-title {
+    margin: 32px 0 12px 0;
+    font-size: 20px;
+    font-weight: 700;
+}
 
-    .month-select {
-      margin-top: 20px;
-      background: rgba(255,255,255,0.18);
-      padding: 10px 16px;
-      display: inline-block;
-      border-radius: 14px;
-      font-size: 18px;
-      backdrop-filter: blur(3px);
-    }
+/* 플로팅 버튼 */
+.fab {
+    width: 70px;
+    height: 70px;
+    background: #0039a6;
+    color: white;
+    border-radius: 50%;
+    position: fixed;
+    right: 24px;
+    bottom: 24px;
+    font-size: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.25);
+}
 
-    .cards {
-      margin-top: 20px;
-      display: flex;
-      gap: 12px;
-      padding: 0 20px;
-    }
-
-    .card {
-      flex: 1;
-      background: white;
-      padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .card-title {
-      font-size: 16px;
-      opacity: 0.7;
-    }
-
-    .card-value {
-      font-size: 32px;
-      font-weight: 700;
-      margin-top: 10px;
-      color: #0b3d91;
-    }
-
-    .list-title {
-      font-size: 22px;
-      font-weight: 700;
-      margin: 32px 20px 16px;
-    }
-
-    /* Floating button */
-    .fab {
-      position: fixed;
-      bottom: 30px;
-      right: 30px;
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      background: #0b3d91;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 40px;
-      cursor: pointer;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.25);
-    }
-
-    /* Modal */
-    .modal-bg {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.5);
-      display: none;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .modal {
-      background: white;
-      width: 90%;
-      max-width: 420px;
-      padding: 24px;
-      border-radius: 20px;
-    }
-
-    .input-box {
-      margin-top: 16px;
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 12px 14px;
-      border-radius: 14px;
-      border: 1px solid #ccc;
-      font-size: 16px;
-    }
-
-    textarea { height: 90px; }
-
-    .btn {
-      width: 100%;
-      margin-top: 20px;
-      background: #0b3d91;
-      color: white;
-      padding: 14px;
-      border-radius: 14px;
-      text-align: center;
-      font-size: 18px;
-      cursor: pointer;
-    }
-  </style>
+/* 모달 */
+.modal-bg {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,.45);
+    display: none;
+}
+.modal {
+    width: 90%;
+    max-width: 420px;
+    padding: 20px;
+    background: white;
+    border-radius: 20px;
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+}
+.modal input, .modal select, .modal textarea {
+    width: 100%;
+    margin-top: 10px;
+    padding: 12px;
+    border-radius: 12px;
+    border: 1px solid #ccc;
+}
+.modal button {
+    margin-top: 16px;
+    width: 100%;
+    padding: 14px;
+    font-size: 17px;
+    background: #0039a6;
+    color: white;
+    border-radius: 12px;
+    border: none;
+}
+</style>
 </head>
-
 <body>
 
-<!-- ================= HEADER ================== -->
+<!-- ===== 헤더 ===== -->
 <div class="header">
-  <div class="title">신흥중 야구부</div>
-  <div class="subtitle">집행부 전용 가계부</div>
+    <h1>신흥중 야구부</h1>
+    <p>집행부 전용 가계부</p>
 
-  <div class="month-select">
-    <select id="selectMonth">
-      <option>2025 / 11</option>
-      <option>2025 / 12</option>
-      <option>2026 / 01</option>
-    </select>
-  </div>
+    <div class="select-box">
+        <select id="budgetMonth">
+            <option>2025/11</option>
+            <option>2025/12</option>
+            <option>2026/01</option>
+        </select>
+    </div>
+
+    <div class="card-wrap">
+        <div class="card">
+            이번달 예산
+            <strong id="budget">₩0</strong>
+        </div>
+        <div class="card">
+            지출 합계
+            <strong id="totalSpent">₩0</strong>
+        </div>
+        <div class="card">
+            남은 예산
+            <strong id="remain">₩0</strong>
+        </div>
+    </div>
 </div>
 
-<!-- ================= DASHBOARD ================= -->
-<div class="cards">
-  <div class="card">
-    <div class="card-title">이번달 예산</div>
-    <div class="card-value" id="budget">₩0</div>
-  </div>
-
-  <div class="card">
-    <div class="card-title">지출 합계</div>
-    <div class="card-value" id="total">₩0</div>
-  </div>
-
-  <div class="card">
-    <div class="card-title">남은 예산</div>
-    <div class="card-value" id="left">₩0</div>
-  </div>
+<div style="padding:20px;">
+    <div class="history-title">지출 내역</div>
+    <div id="historyList" style="font-size:16px; color:#333;">등록된 내역이 없습니다.</div>
 </div>
 
-<div class="list-title">지출 내역</div>
-<div id="expenseList"></div>
-
-<!-- Floating Button -->
+<!-- ===== 플로팅 버튼 ===== -->
 <div class="fab" onclick="openModal()">+</div>
 
-<!-- ================ Modal ================ -->
-<div class="modal-bg" id="modalBG">
-  <div class="modal">
-    <h2>지출 등록</h2>
+<!-- ===== 입력 모달 ===== -->
+<div class="modal-bg" id="modalBg">
+    <div class="modal">
+        <h2>지출 등록</h2>
 
-    <div class="input-box">
-      <label>등록자</label>
-      <input id="writer" placeholder="예: 홍길동" />
+        <input id="who" placeholder="등록자 예: 이승현">
+        <input id="date" type="date">
+        <select id="category">
+            <option value="">카테고리 선택</option>
+            <option>식비</option>
+            <option>장비</option>
+            <option>숙박</option>
+            <option>이동비</option>
+        </select>
+        <input id="amount" type="number" placeholder="금액 (숫자만)">
+        <textarea id="memo" rows="3" placeholder="지출 내용"></textarea>
+
+        <label>영수증 업로드</label>
+        <input id="receipt" type="file" accept="image/*">
+
+        <button onclick="saveData()">저장하기</button>
     </div>
-
-    <div class="input-box">
-      <label>지출일</label>
-      <input id="date" type="date" />
-    </div>
-
-    <div class="input-box">
-      <label>카테고리</label>
-      <select id="category">
-        <option>식비</option>
-        <option>용품</option>
-        <option>훈련비</option>
-        <option>기타</option>
-      </select>
-    </div>
-
-    <div class="input-box">
-      <label>금액</label>
-      <input id="amount" type="number" />
-    </div>
-
-    <div class="input-box">
-      <label>내용</label>
-      <textarea id="content"></textarea>
-    </div>
-
-    <div class="input-box">
-      <label>영수증 이미지</label>
-      <input id="receiptFile" type="file" accept="image/*" />
-    </div>
-
-    <div class="btn" onclick="saveExpense()">저장</div>
-  </div>
 </div>
 
 <script>
-/* ========================================
-   GitHub API 설정
-======================================== */
-const GITHUB_TOKEN = "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";  // ← 너의 토큰 입력
-const REPO_OWNER = "sicsin777-create";
-const REPO_NAME = "pwa-shinheung-expense";
+/* ===== 모달 열고 닫기 ===== */
+function openModal() { document.getElementById("modalBg").style.display = "block"; }
+function closeModal() { document.getElementById("modalBg").style.display = "none"; }
 
+/* ===============================
+   GitHub 저장 설정
+================================*/
+const TOKEN = localStorage.getItem("GITHUB_TOKEN");  // UI에서 입력받아 저장할 것
+const OWNER = "sicsin777-create";
+const REPO = "pwa-shinheung-expense";
 
-/* ========================================
-   Modal 기능
-======================================== */
-function openModal() {
-  document.getElementById("modalBG").style.display = "flex";
+/* ===== JSON 업로드 =====*/
+async function uploadJSON(dataObj) {
+    const jsonPath = "data/expenses.json";
+
+    const getRes = await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/contents/${jsonPath}`, {
+        headers: { Authorization: `Bearer ${TOKEN}` }
+    });
+
+    const getJson = await getRes.json();
+    const sha = getJson.sha;
+
+    const newContent = btoa(unescape(encodeURIComponent(JSON.stringify(dataObj, null, 2))));
+
+    return await fetch(`https://api.github.com/repos/${OWNER}/${REPO}/contents/${jsonPath}`, {
+        method: "PUT",
+        headers: { Authorization: `Bearer ${TOKEN}` },
+        body: JSON.stringify({
+            message: "Update expenses.json",
+            content: newContent,
+            sha: sha
+        })
+    });
 }
 
-function closeModal() {
-  document.getElementById("modalBG").style.display = "none";
+/* ===== 영수증 이미지 업로드 ===== */
+async function uploadReceipt(file) {
+    const path = `data/receipts/${Date.now()}_${file.name}`;
+    const content = await fileToBase64(file);
+
+    return fetch(`https://api.github.com/repos/${OWNER}/${REPO}/contents/${path}`, {
+        method: "PUT",
+        headers: { Authorization: `Bearer ${TOKEN}` },
+        body: JSON.stringify({
+            message: "Upload receipt",
+            content: content.split(",")[1]
+        })
+    }).then(r => r.json());
 }
 
-
-/* ========================================
-   Base64 변환
-======================================== */
 function fileToBase64(file) {
-  return new Promise((resolve) => {
-    const reader = new FileReader();
-    reader.onload = () => resolve(reader.result.split(",")[1]);
-    reader.readAsDataURL(file);
-  });
+    return new Promise(resolve => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.readAsDataURL(file);
+    });
 }
 
+/* ===== 저장 버튼 클릭 ===== */
+async function saveData() {
+    const who = document.getElementById("who").value;
+    const date = document.getElementById("date").value;
+    const category = document.getElementById("category").value;
+    const amount = document.getElementById("amount").value;
+    const memo = document.getElementById("memo").value;
+    const file = document.getElementById("receipt").files[0];
 
-/* ========================================
-   GitHub에 파일 업로드 함수
-======================================== */
-async function uploadToGitHub(path, contentBase64) {
-  const url = `https://api.github.com/repos/${REPO_OWNER}/${REPO_NAME}/contents/${path}`;
+    let receiptUrl = "";
 
-  const res = await fetch(url, {
-    method: "PUT",
-    headers: {
-      Authorization: `Bearer ${GITHUB_TOKEN}`,
-      "Content-Type": "application/json"
-    },
-    body: JSON.stringify({
-      message: "Update data",
-      content: contentBase64
-    })
-  });
+    if (file) {
+        const uploadRes = await uploadReceipt(file);
+        receiptUrl = uploadRes.content.download_url;
+    }
 
-  return await res.json();
-}
+    const newItem = {
+        who, date, category,
+        amount: Number(amount),
+        memo,
+        receipt: receiptUrl
+    };
 
+    const res = await fetch(`https://raw.githubusercontent.com/${OWNER}/${REPO}/main/data/expenses.json`);
+    let arr = await res.json();
 
-/* ========================================
-   expenses.json 불러오기
-======================================== */
-async function loadExpenses() {
-  const url = `https://raw.githubusercontent.com/${REPO_OWNER}/${REPO_NAME}/main/data/expenses.json`;
-  const res = await fetch(url);
-  return await res.json();
-}
+    arr.push(newItem);
+    await uploadJSON(arr);
 
-
-/* ========================================
-   지출 저장 기능
-======================================== */
-async function saveExpense() {
-  const writer = document.getElementById("writer").value;
-  const date = document.getElementById("date").value;
-  const category = document.getElementById("category").value;
-  const amount = Number(document.getElementById("amount").value);
-  const content = document.getElementById("content").value;
-  const file = document.getElementById("receiptFile").files[0];
-
-  if (!writer || !date || !amount) {
-    alert("필수항목을 입력하세요.");
-    return;
-  }
-
-  let receiptURL = "";
-
-  // ============ 이미지 업로드 ===============
-  if (file) {
-    const base64 = await fileToBase64(file);
-    const fileName = `data/receipts/${Date.now()}.png`;
-
-    const uploadResult = await uploadToGitHub(fileName, base64);
-    receiptURL = uploadResult.content.download_url;
-  }
-
-  // ============ 기존 데이터 로드 ===============
-  const expenses = await loadExpenses();
-
-  const newItem = {
-    id: Date.now(),
-    writer,
-    date,
-    category,
-    amount,
-    content,
-    receipt: receiptURL
-  };
-
-  expenses.push(newItem);
-
-  // ============ JSON 다시 업로드 ===============
-  const jsonBase64 = btoa(unescape(encodeURIComponent(JSON.stringify(expenses, null, 2))));
-  await uploadToGitHub("data/expenses.json", jsonBase64);
-
-  alert("저장되었습니다!");
-  closeModal();
-  location.reload();
+    alert("저장 완료!");
+    closeModal();
+    location.reload();
 }
 </script>
 
